syntax = "proto3";

package item.v1;

option go_package = "github.com/heojeongbo/grpc/gen/item/v1;itemv1";

import "item/v1/item.proto";

// ItemService provides CRUD operations for items
service ItemService {
  rpc CreateItem(CreateItemRequest) returns (CreateItemResponse) {}
  rpc GetItem(GetItemRequest) returns (GetItemResponse) {}
  rpc ListItems(ListItemsRequest) returns (ListItemsResponse) {}
  rpc UpdateItem(UpdateItemRequest) returns (UpdateItemResponse) {}
  rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse) {}
  // Server streaming: Watch item changes in real-time
  rpc WatchItems(WatchItemsRequest) returns (stream WatchItemsResponse) {}
}
